--- a/frontend/src/css/fonts.css
+++ b/frontend/src/css/fonts.css
@@ -2,7 +2,7 @@
 
 @font-face {
     font-family: 'IBM Plex Sans';
-    src: url('C:\Users\bikas\Downloads\School-Website-master\School-Website-master\src\fonts\IBMPlexSans-Regular.ttf') format('truetype');
+    src: url('../fonts/IBMPlexSans-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
   }
